<resources>
    <string name="app_name">Okta OpenID Connect</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out_session">Sign out of session</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown">Unknown error. Check the logs for trace</string>
    <string name="sign_in_success">Sign in successful.</string>
    <string name="sign_out_success">Signed out of browser session</string>
    <string name="optional">Field is optional</string>
    <string name="login_hint">Login hint</string>
    <string name="prompt_state">State</string>
    <string name="prompt_hint">User hint (optional)</string>
    <string name="hardware_keystore">Require hardware keystore</string>
    <string name="hardware_keystore_summary">Encryption key must be stored by a keystore that is hardware-backed.
        Requires Android 6.0 and up. Does not work on emulators.</string>
    <string name="custom_sign_in">Use custom sign in</string>
    <string name="custom_sign_in_summary">Select to use custom sign-in sample. By default app starts with using browse based sign in.</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_input">Missing username or password</string>
    <string name="restart_app">Restart for settings to take effect.</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="authorized">Sign-in authorized</string>
    <string name="get_profile">Get profile</string>
    <string name="check_expired">Check if token expired</string>
    <string name="sign_out_okta">Sign out of Okta</string>
    <string name="clear_data">Clear data</string>
    <string name="clear_data_reset">Clear data, reset settings</string>
    <string name="invalid_session">Invalid session</string>
    <string name="data_cleared">All data removed</string>
    <string name="token_expired">Token expired:</string>
    <string name="success">Success</string>
    <string name="error">Error check logs</string>
    <string name="manage_tokens">Manage tokens</string>

    <string name="refresh_token">Refresh token</string>
    <string name="revoke_token">Revoke token</string>
    <string name="introspect_token">Introspect token</string>
    <string name="display_token">Display token</string>
    <string name="select_token">Select a token type</string>
    <string name="active">%s is active: %b</string>
    <string name="revoked">%s token has been revoked: %b</string>
    <string name="use_biometric_summary">Select to enable or disable biometric</string>
    <string name="use_biometric">Enable biometric</string>
    <string name="biometric_title">Confirm credentials</string>
    <string name="error_status">Authentication error code %d, %s</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="unauthenticated">Unable to authenticate device</string>
    <string name="authenticated">Device authenticated</string>
    <string name="migrate_error">Unable to switch encryption</string>
    <string name="enable_biometric">Enable biometric authentication?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string-array name="tokens">
        <item>Access token</item>
        <item>Refresh token</item>
        <item>ID token</item>
    </string-array>


</resources>
