<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorized_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.AuthorizedFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/scroll_view_height"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/vertical_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/get_profile"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_expired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/check_expired"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/get_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_okta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/sign_out_okta"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/check_expired" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/clear_data"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/sign_out_okta" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manage_tokens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/manage_tokens"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/clear_data" />
</androidx.constraintlayout.widget.ConstraintLayout>
