<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorized_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.ManageTokensFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/scroll_view_height"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refresh_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/vertical_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/refresh_token"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/revoke_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/revoke_token"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/refresh_token" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/introspect_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/introspect_token"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/revoke_token" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/display_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_padding"
        android:layout_marginEnd="@dimen/horizontal_padding"
        android:text="@string/display_token"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@+id/introspect_token" />

</androidx.constraintlayout.widget.ConstraintLayout>
