<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/biometric_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".fragments.BiometricFragment">

    <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/scroll_view_height"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:layout_marginEnd="@dimen/horizontal_padding"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
    </ScrollView>

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_padding"
                android:layout_marginTop="@dimen/vertical_padding"
                android:layout_marginEnd="@dimen/horizontal_padding"
                android:text="@string/retry"
                android:theme="@style/AppTheme.Button" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_padding"
                android:layout_marginTop="@dimen/vertical_padding"
                android:layout_marginEnd="@dimen/horizontal_padding"
                android:text="@string/clear_data"
                android:theme="@style/AppTheme.Button" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_padding"
                android:layout_marginTop="@dimen/vertical_padding"
                android:layout_marginEnd="@dimen/horizontal_padding"
                android:text="@string/exit"
                android:theme="@style/AppTheme.Button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>